[tool.poetry]
name = "ocaclient"
version = "0.0.0"
description = "A very simple client for OCA's web services."
authors = ["Hugo Osvaldo Barrera <hugo@barrera.io>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.2"
lxml = "^4.7.1"
zeep = ">=3,<5"

[tool.poetry.dev-dependencies]
mypy = "^0.941"
types-python-dateutil = "^2.8.9"

[build-system]
requires = ["poetry>=1.2.0a2", "poetry-dynamic-versioning>=1.0.0b1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
